SERVER-12954 w parameter is not propagated correctly on compatibility writeMode

Send resetError only when absolutely necessary.